Start develop Main Page
git-svn-id: https://campus.cs.le.ac.uk/svn/ma738/code/branches/master/task-activity-planner@27 1db4ce41-ffac-4b5a-a9c4-010826f1a5c3

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Task Activity Planner" />
 
-    <title>React App</title>
+    <title>Task Activity Planner | Welcome</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
