--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,8 @@
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
 
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" />
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
